# AI-bigdata-course

./: README.md
Project/: BPprediction_AI_project.txt  langchain_processor.py  physionet_predictor.py
m04/: day01_2.py  day02_1.py  day02_2.py  day02_3.py  day05_1.ipynb  day05_1.py  day06.ipynb  day06_timezone.py  day07.ipynb  day08_lcel.ipynb  day08_prompt_template.py  day09_02_runnable.ipynb  day10_ai_poet.py  day1_open_AI의_API_key_활용(1).py  day1_open_AI의_API_key_활용(3).py  day1_open_AI의_API_key_활용(4).py  day1_open_AI의_API_key_활용(5).py  day1_open_AI의_API_key_활용(6).py  day1_open_AI의_API_key_활용(7).py  day1_open_AI의_API_key_활용(8).py  day2_문서와_논문_요약(3).py  day3_녹음된_파일_정리해주는_AI_서기(1).ipynb  day4_녹음된_파일_저장해주는_AI_서기(2).ipynb  day5_GPT_모델로_이미지_분석(1).ipynb  day5_GPT_모델로_이미지_분석(2).py  day6_GPT_모델로_이미지_분석(4).ipynb  day6_streamlit_3.py  day6_timezone_2.py  day7_ChatOpenAI_주요_매개변수와_출력.ipynb  day8_(1)_LCEL.ipynb  day8_(2)_prompt_template.ipynb  day8_(3)_prompt_template.py  day8_(5)_prompt_template.py  day9_(1)_runnable.ipynb  dya08_prompt_Template.ipynb  m04_07.ipynb  m04_day03.ipynb  (+4 more)
m05/: m05_day01_chatPDF_st.py  m05_day01_multiquery_unique_union.ipynb  m05_day02_multiquery_unique_union.ipynb  m05_day03_hybrid.ipynb  m05_day03_st.py  m05_day04_langGraph-basic.ipynb  m05_day04_langchain_agent.py  m05_day05_langGraph-AgenticRAG.ipynb  m05_day05_langGraph-agent.ipynb  m05_day05_langGraph-basic_2.ipynb  m05_day06_langGraph-AgenticRAG.ipynb  m05_day06_pydantic.ipynb  m05_day07_langGraph-AgenticRAG2.ipynb  m05_day07_localEmbedding.ipynb  m05_day08_streamlit_rag_memory.py  pyproject.toml
(+10 files in other folders)
