[project]
name = "my-langchain-project"
version = "0.1.0"
description = ""
authors = [
    {name = "rombird",email = "romsae5510@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.98.0,<2.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "langgraph (>=0.6.6,<0.7.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "^0.3.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
